k8s/clusters/production/apps/rifqoi-com/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rifqoi-com
spec:
  selector:
    app: rifqoi-com
  ports:
    - port: 4321
      targetPort: 4321
