k8s/clusters/production/apps/rifqoi-com/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rifqoi-com
spec:
  parentRefs:
    - name: rifqoi-com-gw
  hostnames:
    - nongkee.id
  rules:
    - backendRefs:
        - name: rifqoi-com
          port: 4321
